# pyqcustomplot-mingw64

./: CMakeLists.txt  README.md
example/: demo.py
src/: bindings.xml  qcustomplot.cpp  qcustomplot.h  wrapper.hpp
